--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGO_URI=<your_mongo_connection_string_here>
+MONGO_URI=mongodb+srv://dungeonsnotdating_db_user:dNotd22!@clustercrestfell.8zxrixg.mongodb.net/?appName=ClusterCrestfell
